--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -110,12 +110,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip install matplotlib==3.7.1"
+      ],
       "metadata": {
-        "id": "REYsDRqHM6hN"
+        "id": "REYsDRqHM6hN",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 515
+        },
+        "outputId": "14d11189-988a-4075-e032-b181fd4c75ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting matplotlib==3.7.1\n",
+            "  Downloading matplotlib-3.7.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.6 kB)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (4.57.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.4.8)\n",
+            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.26.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (24.2)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (11.1.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib==3.7.1) (1.17.0)\n",
+            "Downloading matplotlib-3.7.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.6/11.6 MB\u001b[0m \u001b[31m57.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: matplotlib\n",
+            "  Attempting uninstall: matplotlib\n",
+            "    Found existing installation: matplotlib 3.8.1\n",
+            "    Uninstalling matplotlib-3.8.1:\n",
+            "      Successfully uninstalled matplotlib-3.8.1\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "plotnine 0.14.5 requires matplotlib>=3.8.0, but you have matplotlib 3.7.1 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed matplotlib-3.7.1\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "matplotlib",
+                  "mpl_toolkits"
+                ]
+              },
+              "id": "15c6f0e7e69245cba9dedbc5dd3bdff1"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -134,7 +185,7 @@
       "metadata": {
         "id": "_xUxLlZFM728"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -148,22 +199,82 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "241cbafd-bfb3-47a1-da79-8ae9a9d180ed"
+        "outputId": "7df0d075-d48f-400f-adf5-89d1a655ef68"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'3.10.0'"
+              "'3.7.1'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "KrZxLJLL9kPf"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listas = [8, 12, 54, 23, 43, 1, 90, 87, 105, 77]"
+      ],
+      "metadata": {
+        "id": "RBhmFZYp9rjT"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import choice"
+      ],
+      "metadata": {
+        "id": "j_sghdZi91Ih"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = choice(listas)\n",
+        "lista"
+      ],
+      "metadata": {
+        "id": "6nerOEnB-eNu",
+        "outputId": "c0aa7337-af74-4b0c-9c41-71a5cbee249e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "54"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -267,12 +378,12 @@
         "matplotlib.__version__"
       ],
       "metadata": {
-        "id": "5BnBkjcH1gST",
-        "outputId": "5ef43595-3478-4289-ad7c-ee71294129b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "5BnBkjcH1gST",
+        "outputId": "5ef43595-3478-4289-ad7c-ee71294129b7"
       },
       "execution_count": 2,
       "outputs": [
@@ -306,12 +417,12 @@
         "matplotlib.__version__"
       ],
       "metadata": {
-        "id": "kxxIXdOg1tya",
-        "outputId": "4beac06e-634d-436f-f285-04bf0b01e305",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "kxxIXdOg1tya",
+        "outputId": "4beac06e-634d-436f-f285-04bf0b01e305"
       },
       "execution_count": 4,
       "outputs": [
@@ -540,12 +651,12 @@
         "estudiantes.pop(3)"
       ],
       "metadata": {
-        "id": "V6Tz4gr76Ezr",
-        "outputId": "908c1ea9-c01d-4ceb-9323-d8e055a68b31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "V6Tz4gr76Ezr",
+        "outputId": "908c1ea9-c01d-4ceb-9323-d8e055a68b31"
       },
       "execution_count": 13,
       "outputs": [
@@ -619,12 +730,12 @@
         "estudiante"
       ],
       "metadata": {
-        "id": "FV_h0tfL6mTX",
-        "outputId": "6489dcac-0a25-4e2b-adeb-b92d94c06a35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "FV_h0tfL6mTX",
+        "outputId": "6489dcac-0a25-4e2b-adeb-b92d94c06a35"
       },
       "execution_count": 21,
       "outputs": [
@@ -649,11 +760,11 @@
         "help(choice)"
       ],
       "metadata": {
-        "id": "vryJyXb4796i",
-        "outputId": "507663b2-a959-44c6-ba7c-b0e6afaaa678",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vryJyXb4796i",
+        "outputId": "507663b2-a959-44c6-ba7c-b0e6afaaa678"
       },
       "execution_count": 22,
       "outputs": [
