--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -807,7 +807,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,9 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "2Yvr71PIND_r"
       },
@@ -1154,7 +1152,7 @@
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1174,7 +1172,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1200,7 +1198,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1237,7 +1235,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,7 +1266,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1328,7 +1326,7 @@
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1343,7 +1341,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,7 +1362,7 @@
       "metadata": {
         "id": "04YIHBu-MTNB"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1379,7 +1377,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1460,7 +1458,7 @@
       "metadata": {
         "id": "nejuZXsU_Fd_"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1473,7 +1471,7 @@
       "metadata": {
         "id": "FdMnBiDN-9Sf"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1488,7 +1486,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,7 +1509,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1534,7 +1532,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1571,7 +1569,7 @@
           "height": 141
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1630,7 +1628,7 @@
       "metadata": {
         "id": "JdMFsT9GMgI6"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1643,7 +1641,7 @@
       "metadata": {
         "id": "p7AwNnTCMgLf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1658,7 +1656,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1680,7 +1678,7 @@
       "metadata": {
         "id": "TjmB8IWpMgV4"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1695,7 +1693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1770,7 +1768,7 @@
       "metadata": {
         "id": "unNLrdFjMjbv"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1787,7 +1785,7 @@
       "metadata": {
         "id": "Rmvg4hNeMjeD"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1803,7 +1801,7 @@
           "height": 141
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1826,7 +1824,7 @@
       "metadata": {
         "id": "hSht0Z2cMjlT"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1842,7 +1840,7 @@
           "height": 141
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1865,7 +1863,7 @@
       "metadata": {
         "id": "EOB5WSdICYBr"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1883,7 +1881,7 @@
       "metadata": {
         "id": "mJgCNCINCvol"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1898,7 +1896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1932,7 +1930,7 @@
           "height": 176
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1955,7 +1953,7 @@
       "metadata": {
         "id": "yJ8CUaAbDkLX"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1966,7 +1964,7 @@
       "metadata": {
         "id": "xYwGpPtQDoEP"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1990,7 +1988,7 @@
           "height": 176
         }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2048,7 +2046,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2067,7 +2065,7 @@
       "metadata": {
         "id": "wcNxDJoPMmTJ"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2082,7 +2080,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,21 +2289,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_grupo = ['Juan', 8.0, 9.0, 10.0, 'Maria', 9.0, 7.0, 6.0, 'José', 3.4, 7.0, 7.0, 'Claudia', 5.5, 6.6, 8.0, 'Ana', 6.0, 10.0, 9.5]"
+      ],
       "metadata": {
         "id": "azR_cX-ILghB"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres = []\n",
+        "notas = []\n",
+        "\n",
+        "for i in range(len(notas_grupo)):\n",
+        "  if i % 4 == 0:\n",
+        "    nombres.append(notas_grupo[i])\n",
+        "  else:\n",
+        "    notas.append(notas_grupo[i])"
+      ],
       "metadata": {
-        "id": "GhfsJvs9LgjY"
+        "id": "GhfsJvs9LgjY",
+        "outputId": "b73b1e9d-db08-4728-e535-35b3a591bc3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'nombres' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-68ca1a24b8a7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas_grupo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mnombres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'nombres' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
