--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -2311,45 +2311,130 @@
         "    notas.append(notas_grupo[i])"
       ],
       "metadata": {
-        "id": "GhfsJvs9LgjY",
-        "outputId": "b73b1e9d-db08-4728-e535-35b3a591bc3a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
+        "id": "GhfsJvs9LgjY"
       },
-      "execution_count": 2,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombres"
+      ],
+      "metadata": {
+        "id": "tB8FA20gLiog",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4c23be5-35d7-4882-f8a4-1ec767379caa"
+      },
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'nombres' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-68ca1a24b8a7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas_grupo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mnombres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'nombres' is not defined"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas"
+      ],
+      "metadata": {
+        "id": "SCi8Jl82Liqo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "65865b58-6eec-4a30-8271-2f1848b6f746"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8.0, 9.0, 10.0, 9.0, 7.0, 6.0, 3.4, 7.0, 7.0, 5.5, 6.6, 8.0, 6.0, 10.0, 9.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(notas)"
+      ],
+      "metadata": {
+        "id": "I2W-DYv7kJ8t",
+        "outputId": "e689cfbf-efb1-4c4f-a64d-87f085cebed8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8.0, 9.0, 10.0, 9.0, 7.0, 6.0, 3.4, 7.0, 7.0, 5.5, 6.6, 8.0, 6.0, 10.0, 9.5]\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_separadas = []\n",
+        "\n",
+        "for i in range(0, len(notas),3):\n",
+        "  #notas_separadas.append(notas[i:i+3])\n",
+        "  notas_separadas.append([notas[i],notas[i+1],notas[i+2]])"
+      ],
       "metadata": {
-        "id": "tB8FA20gLiog"
+        "id": "z1VHDN9kkP0B"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_separadas"
+      ],
       "metadata": {
-        "id": "SCi8Jl82Liqo"
+        "id": "wk0Fau5vl3T2",
+        "outputId": "ddc10489-1be7-4111-9bf7-478144622fca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[8.0, 9.0, 10.0],\n",
+              " [9.0, 7.0, 6.0],\n",
+              " [3.4, 7.0, 7.0],\n",
+              " [5.5, 6.6, 8.0],\n",
+              " [6.0, 10.0, 9.5]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2383,39 +2468,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres = ['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+      ],
       "metadata": {
         "id": "YA1zJ0G6LkTy"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import randint\n",
+        "\n",
+        "def calula_codigo():\n",
+        "    return randint(0,999)"
+      ],
       "metadata": {
         "id": "yBzPwhGiLkWa"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "codigo_estudiante = []\n",
+        "\n",
+        "for nombre in range(len(nombres)):\n",
+        "  codigo_estudiante.append((nombres[nombre],nombres[nombre][0] + str(calula_codigo())))"
+      ],
       "metadata": {
         "id": "9qgGAjSyLndK"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "codigo_estudiante"
+      ],
       "metadata": {
-        "id": "jVRxtOyeLngM"
+        "id": "jVRxtOyeLngM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5d1285d-cd11-43aa-a8e9-d45075d4670c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 'J240'),\n",
+              " ('Maria', 'M381'),\n",
+              " ('José', 'J562'),\n",
+              " ('Claudia', 'C252'),\n",
+              " ('Ana', 'A697')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2473,23 +2591,52 @@
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]"
+      ],
       "metadata": {
         "id": "h7LeBrgnLAG6"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedios = [round(promedio(nota),1) for nota in notas]\n",
+        "promedios"
+      ],
+      "metadata": {
+        "id": "3j8_H7e8LAJZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da24b26b-dd75-4e48-ef8c-e620e084840a"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.0, 7.3, 5.8, 6.7, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3j8_H7e8LAJZ"
+        "id": "V2DoGHyRbFn6"
       },
       "execution_count": null,
       "outputs": []
@@ -2519,18 +2666,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedios = [9.0, 7.3, 5.8, 6.7, 8.5]\n",
+        "nombres = [('Juan', 'J240'), ('Maria', 'M381'), ('José', 'J562'), ('Claudia', 'C252'), ('Ana', 'A697')]"
+      ],
       "metadata": {
         "id": "QK-ubmmrLC7I"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombres = [nombre[0] for nombre in nombres]\n",
+        "nombres"
+      ],
+      "metadata": {
+        "id": "df1Q8GGELC9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "beba9f1d-c54e-45f5-df81-8e1e866d0b46"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "df1Q8GGELC9b"
+        "id": "GoSiANJxdjxH"
       },
       "execution_count": null,
       "outputs": []
@@ -2549,21 +2726,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "zip(nombres,promedios)"
+      ],
       "metadata": {
-        "id": "841v92WvLEol"
+        "id": "841v92WvLEol",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f5a704a-851a-403a-d822-a44f5abc99d2"
       },
-      "execution_count": null,
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<zip at 0x7fe9d36a8e80>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estudiantes = list(zip(nombres,promedios))"
+      ],
+      "metadata": {
+        "id": "U8b4G_2oLErp"
+      },
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "becados = [estudiante[0] for estudiante in estudiantes if estudiante[1] >= 8]"
+      ],
       "metadata": {
-        "id": "U8b4G_2oLErp"
+        "id": "Jh_C3Cv-dJqM"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "becados"
+      ],
+      "metadata": {
+        "id": "kGS0q12SdlfF",
+        "outputId": "45e9c09b-f89c-4ddb-feab-55c4609a2136",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "markdown",
